# Embedded_Linux

./: .gitattributes  .gitignore
AdminLinux_Task1/: README.md  oldpasswd
AdminLinux_Task2/: README.md  binary_search.rar
AdminLinux_Task2/binary_search/: .gitignore  LICENSE
AdminLinux_Task2/binary_search/lib/binary_search/include/: binary_search.h
AdminLinux_Task2/binary_search/lib/binary_search/src/: binary_search.cpp
AdminLinux_Task2/binary_search/src/: main.cpp
AdminLinux_Task3/: README.md  script.sh
AdminLinux_Task5/: README.md
EmbeddedLinuxKitchen/Crosstool-NG_Task1/: Crosstool-NG_install.sh  README.md
EmbeddedLinuxKitchen/VirtualSDCard_Task2/: README.md
LinuxAdmin/AdminLinux_Task1/: script.sh
LinuxAdmin/AdminLinux_Task2/binary_search/: CMakeLists.txt  README.md
LinuxAdmin/AdminLinux_Task2/binary_search/lib/binary_search/: CMakeLists.txt
LinuxAdmin/AdminLinux_Task3/: led.c
LinuxAdmin/AdminLinux_Task5/: script.sh
LinuxAdmin/AdminLinux_Task6/: README.md
LinuxAdmin/Printf/: main.c
LinuxAdmin/TCP/: clint.py
TCP/: README.md  server.py
